feat: update journey map

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BIPM Data Science</title>
+    <title>Daphne Journey</title>
 </head>
+<body>
+<h1>hello world</h1>
+<iframe src="journey.html" width="800" height="500"></iframe>
+</body>
 </html>
