feat: add new table about me

--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Daphne Journey</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>hello world</h1>
-<iframe src="journey.html" width="800" height="500"></iframe>
+<div class="container">
+    <h2> ‧₊˚✈︎ 🇹🇼 ⋆🍍⊹🧋 Daphne Hanyun Hsueh ⟡ 👩🏻‍🍳⋆🗺️‧🏃🏻‍♀️‍➡️ ₊˚‧</h2>
+    <table>
+        <tr>
+            <th>Period</th>
+            <th>Role</th>
+            <th>Institution</th>
+            <th>Location</th>
+        </tr>
+        <tr>
+            <td>2018 - 2023</td>
+            <td>🎓 Bachelor - Business Administration</td>
+            <td>NCCU</td>
+            <td>Taipei, Taiwan</td>
+        </tr>
+        <tr>
+            <td>2022 - 2023</td>
+            <td>✈️ Exchange Semester</td>
+            <td>Masstricht University</td>
+            <td>Masstricht, Netherlands</td>
+        </tr>
+        <tr>
+            <td>2023 - 2024</td>
+            <td>👵🏻 Event Planning Specialist</td>
+            <td>Anke Media (Longterm Care Industry)</td>
+            <td>Taipei, Taiwan</td>
+        </tr>
+        <tr>
+            <td>2024 - 2025</td>
+            <td>👩🏻‍💻 Frontend Developer</td>
+            <td>EzTravel (Online Travel Agency)</td>
+            <td>Taipei, Taiwan</td>
+        </tr>
+        <tr>
+            <td>2025 ~ now</td>
+            <td>🥨 Master - BIPM</td>
+            <td>HWR Berlin</td>
+            <td>Berlin, Germany</td>
+        </tr>
+    </table>
+    <iframe src="journey.html" width=100% height="300"></iframe>
+</div>
 </body>
 </html>
