fix: readd industry wording

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <tr>
             <td>2023 - 2024</td>
             <td>👵🏻 Event Planning Specialist</td>
-            <td>Anke Media</td>
+            <td>Anke Media (Long-term Care Industry)</td>
             <td>Taipei, Taiwan</td>
         </tr>
         <tr>
             <td>2024 - 2025</td>
             <td>👩🏻‍💻 Frontend Developer</td>
-            <td>EzTravel</td>
+            <td>EzTravel (Online Travel Agency)</td>
             <td>Taipei, Taiwan</td>
         </tr>
         <tr>
