feat: replace masstpic with anke

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <div class="container">
-    <h2 id="galleryBtn">‧₊˚✈︎ 🇹🇼 ⋆🍍⊹🧋 Daphne Hanyun Hsueh ⟡ 👩🏻‍🍳⋆🗺️‧🏃🏻‍♀️‍➡️ ₊˚</h2>
+    <h2 id="galleryBtn">‧₊˚✈︎ 🇹🇼 ⋆🍍⊹🧋 Daphne Hanyun Hsueh ⟡ 👩🏻‍🍳‧🏃🏻‍♀️‍➡️⋆🧸 ₊˚</h2>
     <table>
         <tr>
             <th>Period</th>
@@ -63,11 +63,11 @@
         <img src="img/run.JPG" alt="Gallery Image 5">
         <img src="img/swim.JPG" alt="Gallery Image 6">
         <img src="img/run2.jpg" alt="Gallery Image 7">
-        <img src="img/masst.jpg" alt="Gallery Image 8">
+        <img src="img/anke.JPG" alt="Gallery Image 8">
         <img src="img/toy1.JPG" alt="Gallery Image 9">
         <img src="img/toy2.jpg" alt="Gallery Image 10">
         <img src="img/toy3.jpg" alt="Gallery Image 11">
-        <img src="img/mass.JPG" alt="Gallery Image 12">
+        <img src="img/old.jpg" alt="Gallery Image 12">
     </div>
 </div>
 
